2007-09-26  Thorsten Kukuk  <kukuk@suse.de>

	* revnetgroup/revnetgroup.8.xml: New.file.
	* revnetgroup/revnetgroup.8: Regenerated from xml source.
	* revnetgroup/Makefile.am: Add rules for xml.

2006-08-02  Thorsten Kukuk  <kukuk@suse.de>

	* makedbm/makedbm.8.xml: New file.
	* makedbm/makedbm.8: Regenerated from xml source.
	* makedbm/Makefile.am: Add rules for xml.

	* mknetid/mknetid.8.xml: New file.
	* mknetid/mknetid.8: Regenerated from xml source.
	* mknetid/Makefile.am: Add rules for xml.

	* rpc.yppasswdd/rpc.yppasswdd.8.xml: New file.
	* rpc.yppasswdd/rpc.yppasswdd.8: Regenerated from xml source.
	* rpc.yppasswdd/Makefile.am: Add rules for xml.

2006-04-07  Thorsten Kukuk  <kukuk@suse.de>

	* etc/ypserv.conf.5.xml: New file.
	* etc/ypserv.conf.5: Regenerated from xml source.

2006-04-06  Thorsten Kukuk  <kukuk@suse.de>

	* etc/netgroup.5.xml: New file.
	* etc/netgroup.5: Regenerated from xml source.
	* etc/Makefile.am: Add rules for xml.
	* configure.in: Check for xml tools.

2006-01-10  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 2.19

	* lib/ypserv_conf.c (load_ypserv_conf): Don't ignore return value
	of fgets().
	* lib/securenets.c (load_securenets): Likewise.
	* revnetgroup/revnetgroup.c (main): Likewise.

	* ypserv/ypserv.c (main): Don't ignore return value of dup().
	* ypserv/server.c (ypproc_xfr_2_svc): Likewise.
	* rpc.ypxfrd/ypxfrd.c (main): Likewise.

	* makedbm/makedbm.c (create_file): Don't ignore return value of
	getline().

	* rpc.yppasswdd/update.c (update_files): Don't ignore return values
	of unlink() and chown().

	* rpc.yppasswdd/yppasswdd.c (main): Don't ignore return values of
	chdir() and dup().

	* ypserv/reg_slp.c (register_slp): Check if hostname is resolveable.

	* configure.in: Make -pie usage configureable.
	Based on patch by Urs Thuermann <urs@isnogud.escape.de>.

2005-09-02  Thorsten Kukuk  <kukuk@suse.de>

	* ypxfr/ypxfr.c (ypxfr): Clear response structures before usage.
